migrations/kube/charts/discordsh/discord/templates/discordsh-redis-armada-bridge.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis
    namespace: discordsh
spec:
    type: ExternalName
    externalName: redis-master.armada.svc.cluster.local

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-disoxide-to-redis
    namespace: armada
spec:
    podSelector:
        matchLabels:
            app: redis-master
    policyTypes:
        - Ingress
    ingress:
        - from:
              - namespaceSelector:
                    matchLabels:
                        name: discordsh
          ports:
              - protocol: TCP
                port: 6379
